Fixed mnemonic verification layout issue whe nusing english

--- a/src/app/pages/mnemonic/mnemonic-write/mnemonic-write.page.scss
+++ b/src/app/pages/mnemonic/mnemonic-write/mnemonic-write.page.scss
@@ -43,7 +43,8 @@
         // color: #192c3a;
         text-align: center;
         width: px2rem(660px);
-        height: px2rem(280px);
+        //height: px2rem(280px);
+        min-height: 2em;
         // display: flex;
         justify-content: center;
         align-items: center;
